# pipe-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
01-docs/: Milestones.md  PythonReadMe.md
pipe-bridge-rs/: Cargo.toml
pipe_bridge_py/: __init__.py  __version__.py  client.py  server.py
pipe_bridge_py/tests/: client.py  clienttest.py  server_test.py  servertest.py  test.py
