[project]
name = "pipe_bridge_py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Kartik Kanugo", email = "karthik.kanugo@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pipe-bridge = "pipe_bridge_py:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pipe_bridge_py"
module-root = ""
